# nvim

./: .gitattributes  .gitignore  .luarc.json  CMakeLists.txt  README.md  considered_plugins.txt  init.lua  lazy-lock.json  tags
lsp/: clangd.lua  cmake.txt  lua_ls.lua  pylsp.lua
lua/: executable_picker.lua  utilities.lua
lua/config/: autocmds.lua  border.lua  build.lua  build1.txt  build3.txt  build4.txt  commands.lua  compiler_profiling.lua  keymaps.lua  keymaps1.txt  lazy.lua  lsp_settings.lua  marks.lua  options.lua  recent_buffers.lua  whichwrap.lua
lua/plugins/: __linter__.txt  __list__.txt  __lspsignature.txt  __null_ls.txt  ast_grep.txt  autopairs.lua  autosession.lua  autosession.txt  bufdelete.lua  chatgpt.lua  cmp-ai.txt  colorizer.lua  colorizer.txt  comments.lua  completion.lua  completion.txt  dap.lua  dap0.txt  dap1.txt  dashboard.lua  dashboard.txt  dashboard_minimal.txt  debugger.lua  (+48 more)
misc/: speedscope.bat
new_cpp_project/: .gitignore  CMakeLists.txt
new_cpp_project/src/: CMakeLists.txt  main.cpp
olc/: CMakeLists.txt  olcPixelGameEngine.h
src/: CMakeLists.txt  allocator.hpp  keys.hpp  main.cpp  main0.txt  meta_func.hpp  mixin.hpp  strong_type_key.hpp  tagged.hpp  utilities.hpp  vertex.h
src/containers/: CMakeLists.txt  arrange_traits.hpp  arrange_traits_iters.txt  arrange_traits_newest.txt  arrange_traits_range.txt  compressed_container.hpp  fuse_traits.hpp  garbage_policy.hpp  garbage_vector.hpp  garbage_vector0.txt  garbage_vector1.txt  key_traits.hpp  key_traits0.txt  order_traits.hpp  order_traits0.txt  property_container.hpp  shift_policies.hpp  sparse_set.hpp  stable_vector.hpp  unordered_matrix.hpp  unordered_vector.hpp  zip_container.hpp
src/engines/: CMakeLists.txt  engine.hpp  example.hpp  half_edge_engine.h  hash_grid_engine.h
src/graph/: CMakeLists.txt  adjacency_list.hpp  adjacency_list1.hpp  adjacency_list2.hpp  adjacency_list3.hpp
src/iterators/: CMakeLists.txt  assign_iterator.hpp  base_iterator.hpp  boost_to_stl.hpp  circular_iterator0.txt  circulator_iterator.hpp  const_iterator.hpp  crtp_iterator.hpp  filter_iterator.hpp  filter_iterator0.txt  flat_iterator.hpp  gen_view.hpp  index_iterator.hpp  index_iterator_ext.txt  iterable.txt  iterator_iterator.hpp  join_iterator.hpp  jump_iterator.hpp  jump_iterator_id_pol.txt  jump_iterator_new0.txt  lookup_iterator.hpp  lookup_iterator0.txt  operator_arrow_proxy.hpp  repeat_iterator.hpp  tensor_iterator.hpp  transform_iterator.hpp  unzip_iterator.hpp  view.hpp  view0.txt  zip_iterator.hpp
src/iterators/versions/: tensor_iterator0.txt  tensor_iterator1.txt  tensor_iterator2.txt  tensor_iterator3.txt  tensor_iterator4.txt  tensor_iterator5.txt  tensor_iterator6.txt  tensor_iterator7.txt  tensor_iterator8.txt  tensor_iterator9.txt  tensor_iterator_og.txt
src/kernel/: CMakeLists.txt  ECS.hpp  My_ECS.hpp  kernel_fuse.hpp  kernel_impl.hpp  kernel_mixin.hpp  key_kernel0.txt
src/key_conts/: CMakeLists.txt  core.hpp  iter_key_cont.hpp  key_map.hpp  key_mult_container.hpp  key_vector.hpp  key_vector0.txt
src/key_matrices/: CMakeLists.txt  cyclic_policy.hpp  jagged_policy.hpp  key_matrix.hpp  matrix.hpp  matrix_policies.hpp  rect_policy.hpp  rect_policy0.txt
src/key_matrices0/: cyclic_policy.hpp  jagged_policy.hpp  key_matrix.hpp  matrix_policies_old.hpp  rect_policy.hpp
src/matrices/: CMakeLists.txt  cyclic_matrix.hpp  cyclic_matrix0.txt  jagged_matrix.hpp  matrix.hpp  matrix_ext.hpp  tensor.hpp
src/mesh/: CMakeLists.txt  bvh_mesh.hpp  he_mesh_og.txt  mesh.hpp  mesh1.txt
src/point_cloud/: CMakeLists.txt  bsp_tree.hpp  hash_grid.hpp  kd_tree.hpp  point_cloud.hpp  point_cloud1.txt  quad_tree.hpp
src/sdf/: CMakeLists.txt  sdfs.h
tests/: CMakeLists.txt  arrange_test.h  kernel_test.h  key_traits_test.h  main.cpp  utils_test.h
(+4 files in other folders)
